# atlantic_server

./: .gitignore  README.md  README.rst  db.sqlite3  manage.py  pyproject.toml
atlantic_server/: manage.py  settings.py  urls.py  wsgi.py
atlantic_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
atlantic_server/atl/: admin.py  apps.py  const.py  gitdoc.py  models.py  serializers.py  urls.py  views.py
atlantic_server/atl/migrations/: 0001_initial.py
atlantic_server/com/: admin.py  apps.py  const.py  models.py  serializers.py  urls.py  views.py
atlantic_server/smd/: admin.py  apps.py  gitdoc.py  models.py  serializers.py  urls.py  views.py
atlantic_server/smd/documents/: procedure.xml
tests/: test_atlantic_server.py
